# MyHttp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json
src/: TcpConnection.h  client.cpp  main_client.cpp  main_server.cpp  server.cpp
src/MyHttpLib/include/: HttpRequestFactory.h  HttpResponse.h  HttpServer.h  HttpTypes.h  ResourceManager.h  TcpConnection.h  TcpServer.h  Utils.h
src/MyHttpLib/src/: HttpRequestFactory.cpp  HttpResponse.cpp  HttpServer.cpp  ResourceManager.cpp  TcpConnection.cpp  TcpServer.cpp  Utils.cpp  Utils.h
test/: HttpRequestFactoryTests.cpp  HttpResponseTests.cpp  ResourceManagerTests.cpp
